<android.support.v7.widget.Toolbar
    android:id="@+id/appbar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
...
